Bug 438646 - Recorder docker does not use KisKineticScroller
Summary: Recorder docker does not use KisKineticScroller
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Unspecified
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-14 18:06 UTC by Alvin Wong
Modified: 2021-06-15 09:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-06-14 18:06:00 UTC
The recorder docker does not use KisKineticScroller, so scrolling it on a tablet is not very user-friendly.
Comment 1 Halla Rempt 2021-06-15 09:50:45 UTC
Git commit 711c6d70c0e96594cf9be01eb7a7efe75d677256 by Halla Rempt.
Committed on 15/06/2021 at 09:50.
Pushed by rempt into branch 'master'.

Add kinetic scrolling to the recorder docker

M  +14   -0    plugins/dockers/recorder/recorderdocker_dock.cpp
M  +3    -0    plugins/dockers/recorder/recorderdocker_dock.h

https://invent.kde.org/graphics/krita/commit/711c6d70c0e96594cf9be01eb7a7efe75d677256