Add kinetic scrolling to the recorder docker

BUG:438646